# sample_outout_enhancer_with_dvc

./: .gitignore  .tmp_dvc_lock_exp_e089fc10ad2b.yaml  data.csv_sample  dvc.yaml  params.yaml  pyproject.toml  readme.md
.devcontainer/: Dockerfile  devcontainer.json
cmd/: back_to_now.sh  evaluate.sh  generate.sh  make_dashboard.sh  start_mlflow_ui.sh  time_huroshiki.sh  time_machine.sh
env/vm_hosting_sh/: additional_installs.sh  batch_excute.sh  get_docker_env.sh  install_nvidia_toolkit.sh  start_container.sh  stop_container.sh
run/: llm_evaluate.py  llm_generate.py  make_dashboard.py  rulebase_evaluate.py  time_huroshiki.py
src/common/: dummy_llm.py  llm_invoker.py
src/evolve/: generate_test_df.py
src/feedback/: judge_submit_df.py  llm_judge.py  rulebase_judge.py
src/feedback/rulebase_funcs/: check_megu_in_text.py  count_text_length.py
src/generate/: generate_test_df.py
src/generate/prompt/: set_idol_discription.txt
src/judge/: judge_submit_df.py  llm_judge.py  rulebase_judge.py
src/judge/prompt/: check_if_category_in_text.txt  check_if_gakunen_in_text.txt  pair_check_word.txt
src/judge/rulebase_funcs/: check_megu_in_text.py  count_text_length.py
src/make_dashboard/: evaluate_step_dashbord.py  generate_step_dashboard.py
src/run/: evolve.py  evolve_text.py  feedback.py
src/utils/: dvc_util.py  hash_util.py
user_content/evolve/prompt/: set_idol_discription.txt
user_content/feedback/prompt/: check_if_category_in_text.txt  check_if_gakunen_in_text.txt  (+1 more)
user_content/llm/: dummy_llm.py
user_content/sandbox/: generate_segment_data.py
