[project]
name = "sample-judge-with-mlflow-and-dvc"
version = "0.1.0"
description = ""
authors = [
    {name = "ChokosenLoveti"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dvc (>=3.60.0,<4.0.0)",
    "dvc-s3 (>=3.2.0,<4.0.0)",
    "dvc-ssh (>=4.2.1,<5.0.0)",
    "mlflow (>=2.22.1,<3.0.0)",
    "pandas (==2.2.0)",
    "jupyterlab (>=4.4.3,<5.0.0)",
    "notebook (>=7.4.3,<8.0.0)",
    "yq (>=3.4.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
